name:                receive-order
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/receive-order#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ReceiveOrder.Api
                     , ReceiveOrder.Handlers
                     , ReceiveOrder.Config
  other-modules:       Paths_receive_order
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , text
                     , wai
                     , warp
                     , optparse-applicative
                     , optparse-text
                     , hasql
                     , hasql-transaction
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable receive-order-api
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , receive-order
                     , hasql-pool
                     , string-conversions
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite receive-order-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , receive-order
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/receive-order
