name:                receive-order
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/receive-order#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Domain
                     , ReceiveOrder.Api
                     , ReceiveOrder.Handlers
                     , ReceiveOrder.Database
  other-modules:       Paths_receive_order
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , servant-server
                     , text
                     , time
                     , wai
                     , warp
                     , hasql
                     , hasql-pool
                     , hasql-transaction
                     , http-types
                     , transformers
                     , string-conversions
                     , either

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable receive-order-api
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Config
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , receive-order
                     , optparse-applicative
                     , optparse-text
                     , text
                     , warp
                     , hasql
                     , hasql-pool
                     , string-conversions

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite receive-order-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       ApiSpec
                     , DomainSpec
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , receive-order
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , hasql-pool
                     , http-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/receive-order
